[package]
name = "yeet-sh"
version = "0.1.0"
edition = "2021"
authors = ["sky"]
description = "🚀 Yeet files across the internet at warp speed"
license = "MIT"
repository = "https://github.com/yourusername/yeet.sh"
keywords = ["file-transfer", "cli", "tui", "cloudflare", "tunnel"]
categories = ["command-line-utilities"]

[[bin]]
name = "yeet"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime & HTTP server
tokio = { version = "1.42", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# CLI
clap = { version = "4.5", features = ["derive", "color"] }

# Error handling
anyhow = "1.0"
color-eyre = "0.6"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = "0.4"
humansize = "2.1"

# Unix fork/daemon
nix = { version = "0.29", features = ["process", "signal", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
